--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
           <button class="close-menu" aria-label="Cerrar menú">
             <img src="/public/quit.svg" height="40" width="40" alt="cerrar menú">
           </button>
-          <li class="seccion"><a class="selected" href="#contacto">Contacto</a></li>
-          <li class="seccion"><a href="#perfil">Perfil</a></li>
+          <li class="seccion"><a class="selected" href="#perfil">Perfil</a></li>
           <li class="seccion"><a href="#experiencias">Experiencia</a></li>
           <li class="seccion"><a href="#habilidades">Habilidades</a></li>
-          <li class="seccion"><a href="#proyectos">Proyectos</a></li>
+          <li class="seccion"><a href="#contacto">Contacto</a></li>
         </ul>
       </nav>
     </header>
@@ -53,14 +52,12 @@
       <section class="profile" id="perfil">
         <div class="profile-info">
           <h1 class="profile-title">Hola, soy  <br />
-            Frander Joseph Mena</h1>
+            Frander Mena</h1>
           <p  class="profile-details">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus,
-            dignissimos! Laboriosam saepe perferendis molestiae iste tenetur.
-            Enim exercitationem nisi quia, sunt velit voluptatem, rerum aut officiis
-            praesentium, quidem ducimus dolor?
+            Ingeniero en ciencias de la computación con fuertes capacidades analiticas, orientado a 
+            objetivos y decidido a mostrar la excelencia en cada ambito profesional que se dedica.
           </p>
-          <button class="profile-btn">Curriculum</button>
+          <a class="profile-btn" href="/public/CV Frander Mena Sandoval.pdf" target="_blank">Curriculum</a>
         </div>
         <div class="profile-img-section">
           <img class="profile-img" src="/public/recorte.png" alt="profile picture"/>
@@ -77,28 +74,24 @@
           <div class="empty"></div>
           <div class="line"></div>
           <div class="experience">
-            <div class="experience-date">2023</div>
+            <div class="experience-date">2023 (Mar-Jul)</div>
             <div class="experience-company">Tecoop.cr</div>
             <div class="experience-position">.NET Developer</div>
             <div class="experience-description">
-              Lorem ipsum dolor sit amet, 
-              consectetur adipisicing elit. Neque earum unde porro, facilis 
-              perferendis libero temporibus? Placeat, suscipit explicabo. 
-              Eos nihil ratione soluta eum eius ducimus corrupti quos illum 
-              doloribus.
+              Encargado de desarrollar y diseñar un sistema de plataforma virtual para las
+              municipalidades con el fin de agilizar y automatizar procesos habituales.
+              Diseño desde base de datos hasta el Frontend.
             </div>
           </div>
 
           <div class="experience experience-left">
-            <div class="experience-date">2023</div>
-            <div class="experience-company">Tecoop.cr</div>
-            <div class="experience-position">.NET Developer</div>
+            <div class="experience-date">2022 (Jun- Ags)</div>
+            <div class="experience-company">Midware.net</div>
+            <div class="experience-position">Typescript Developer</div>
             <div class="experience-description">
-              Lorem ipsum dolor sit amet, 
-              consectetur adipisicing elit. Neque earum unde porro, facilis 
-              perferendis libero temporibus? Placeat, suscipit explicabo. 
-              Eos nihil ratione soluta eum eius ducimus corrupti quos illum 
-              doloribus.
+              Desarrollo de aplicaciones y APIs para la plataforma de Oracle NetSuite,
+              tareas como configuración y uso de APIs para nuevas funcionalidades y vistas
+              para su posterior integración con el resto de la plataforma.
             </div>
           </div>
           <div class="line"></div>
@@ -107,15 +100,13 @@
           <div class="empty"></div>
           <div class="line"></div>
           <div class="experience ">
-            <div class="experience-date">2023</div>
-            <div class="experience-company">Tecoop.cr</div>
+            <div class="experience-date">2022</div>
+            <div class="experience-company">Mobilize.net</div>
             <div class="experience-position">.NET Developer</div>
             <div class="experience-description">
-              Lorem ipsum dolor sit amet, 
-              consectetur adipisicing elit. Neque earum unde porro, facilis 
-              perferendis libero temporibus? Placeat, suscipit explicabo. 
-              Eos nihil ratione soluta eum eius ducimus corrupti quos illum 
-              doloribus.
+              Desarrollador backend de C#, encargado de crear una nueva funcionalidad
+              para un proyecto ya construido, el cual se tomaria como prueba de concepto
+              en un nuevo producto para la empresa.
             </div>
           </div>
         </div>
@@ -139,7 +130,7 @@
     </div>
 
     <div class="horizontal-padding vertical-padding">
-      <section class="contact" id="proyectos">
+      <section class="contact" id="contacto">
         <h2 class="contact-title">Contacto</h2>
         <div class="contact-detail">
           <div class="contact-detail-group">
@@ -157,7 +148,7 @@
           </div>
         </div>
 
-        <form class="contact-form">
+        <form class="contact-form" netlify>
           <div class="contact-form-group">
             <label for="nombre">Nombre</label>
             <input type="text" id="nombre" name="nombre" required>
@@ -178,8 +169,8 @@
         </form>
         <nav class="social">
           <ul class="social-list">
-            <li><a href="#"><img height="40px" width="40px" src="/public/contactos/github.svg" alt="github icon"></a></li>
-            <li><a href="#"><img height="40px" width="40px" src="/public/contactos/linkedin.svg" alt="linkedin icon"></a></li>
+            <li><a href="https://github.com/JosephMen" target="_blank"><img height="40px" width="40px" src="/public/contactos/github.svg" alt="github icon"></a></li>
+            <li><a href="https://www.linkedin.com/in/josephmena97/" target="_blank"><img height="40px" width="40px" src="/public/contactos/linkedin.svg" alt="linkedin icon"></a></li>
           </ul>
         </nav>
       </section>
