--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           </div>
         </div>
 
-        <form class="contact-form" netlify>
+        <form class="contact-form" name="contact" netlify>
           <div class="contact-form-group">
             <label for="nombre">Nombre</label>
             <input type="text" id="nombre" name="nombre" required>
